[gd_scene load_steps=5 format=3 uid="uid://bw7d5jmymfqbm"]

[ext_resource type="Script" path="res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd" id="1_ls63b"]
[ext_resource type="Texture2D" uid="uid://b1lsi3waxb6jf" path="res://Sprites/Enemigos/P_piedra.png" id="1_pltlb"]
[ext_resource type="PackedScene" uid="uid://c0wjgvhp87sex" path="res://Componentes/GenerAyudas.tscn" id="4_b8k6i"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n68s3"]
radius = 8.0

[node name="Piedra" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 0
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 0.001
script = ExtResource("1_ls63b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_pltlb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n68s3")

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="S_wait_time" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GenerAyudas" parent="." instance=ExtResource("4_b8k6i")]

[connection signal="timeout" from="AliveTimer" to="." method="_on_alive_timer_timeout"]
[connection signal="timeout" from="S_wait_time" to="." method="_on_s_wait_time_timeout"]
